metadata/force-app/main/default/objects/Deployment_Request__c/fields/Data_Set__c.field-meta.xml
<CustomField>
    <fullName>Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set</label>
    <referenceTo>PDRI__DataSet__c</referenceTo>
    <relationshipLabel>Deployment Requests</relationshipLabel>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>