metadata/force-app/main/default/objects/Deployment_Request__c/fields/Deployment_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployment Initiated</label>
    <type>Checkbox</type>
</CustomField>