metadata/force-app/main/default/objects/Deployment_Request__c/fields/Deployment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Plan</label>
    <referenceTo>PDRI__Deployment_Plan__c</referenceTo>
    <relationshipLabel>Deployment Requests</relationshipLabel>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>