metadata/force-app/main/default/objects/Deployment_Request__c/fields/Destination_Environment__c.field-meta.xml
<CustomField>
    <fullName>Destination_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Environment</label>
    <referenceTo>PDRI__Managed_Environment__c</referenceTo>
    <relationshipLabel>Deployment Requests (Destination)</relationshipLabel>
    <relationshipName>Deployment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>