metadata/force-app/main/default/objects/Deployment_Request__c/fields/Source_Connection__c.field-meta.xml
<CustomField>
    <fullName>Source_Connection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Connection</label>
    <referenceTo>PDRI__Connection__c</referenceTo>
    <relationshipLabel>Deployment Requests</relationshipLabel>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>