metadata/force-app/main/default/objects/Deployment_Request__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>PDRI__Managed_Environment__c</referenceTo>
    <relationshipLabel>Deployment Requests (Source)</relationshipLabel>
    <relationshipName>Deployment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>