metadata/force-app/main/default/objects/Deployment_Request__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <label>Work Item #</label>
    <type>TextArea</type>
</CustomField>